--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
-<!DOCTYPE html><html><head><meta charset=utf-8><meta name=viewport content="width=device-width,initial-scale=1"><title>moon-organizer</title><link rel=stylesheet href="//fonts.googleapis.com/css?family=Roboto:300,400,500,700,400italic"><link rel=stylesheet href="//fonts.googleapis.com/icon?family=Material+Icons"><link rel=stylesheet href=//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css><link href=/static/css/app.d0ab1df9376381b5da98d3c82c975ded.css rel=stylesheet></head><body><div id=app></div><script type=text/javascript src=/static/js/manifest.e76853531fb639d45499.js></script><script type=text/javascript src=/static/js/vendor.7fe9f3dedac99b670ca3.js></script><script type=text/javascript src=/static/js/app.f88b70356cea0cd2dfc1.js></script><script type=text/javascript src=/static/js/bootstrap-loader.f11178dfb3effe4adc73.js></script></body></html>
+<!doctype html>
+<html>
+<head>
+  <meta charset="utf-8">
+  <title>AngularTest</title>
+  <base href="/">
+
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" rel="stylesheet">
+</head>
+<body>
+  <app-root>Loading...</app-root>
+<script type="text/javascript" src="inline.bundle.js"></script><script type="text/javascript" src="polyfills.bundle.js"></script><script type="text/javascript" src="styles.bundle.js"></script><script type="text/javascript" src="vendor.bundle.js"></script><script type="text/javascript" src="main.bundle.js"></script></body>
+</html>
